# DragonianVoice

./: .gitignore  .gitmodules  BasicDict.json  BertVits.md  CMakeLists.txt  CMakeSettings.json  DragonianSpeech.sln  LICENSE  MoeSSUI.cpp  MoeSSUI.h  MoeVoiceStudioSvc - Core - Cmd.sln  README.md  README_en.md  Resources.qrc  ShirakanaTTS-Cpp.cpp  ShirakanaTTS-Cpp.h  ShirakanaTTSUI.cpp  ShirakanaTTSUI.sln  ShirakanaUI.cpp  ShirakanaUI.h  ShirakanaUI.ui  TTSProjectTemplate.ttsproj  Tacotron2-MoeTTS-Cpp.cpp  Tacotron2-MoeTTS-Cpp.h  VitsInputTemplate.json  app_win32.aps  app_win32.rc  test.json
Bert/bert-base-japanese-v3/: Tokenizer.json
Bert/chinese-roberta-wwm-ext-large/: Tokenizer.json
Bert/deberta-v2-large-japanese/: Tokenizer.json
CMD-RVC-Onnx-Inference/: CMakeLists.txt  main.cpp
CMD-RVC-Onnx-Inference/runtime/: avcodec.lib  avformat.lib  download.cmd  onnxruntime.lib  onnxruntime_providers_shared.lib
CSharpDemo/: CSharpDemo.csproj  Program.cs  README.md  README_en.md
CSharpDemo/Properties/: Resources.Designer.cs  launchSettings.json
DotNetApi/: DotNetApi.csproj  LibSvcApi.cs
DotNetApi/Properties/: launchSettings.json
Lib/MJson/: MJson.h
Lib/OnnxRuntimeDmlProvider/: .signature.p7s  Microsoft.ML.OnnxRuntime.DirectML.nuspec  [Content_Types].xml
Modules/: Modules.cpp  Modules.hpp  README.md  StringPreprocess.hpp
Modules/AvCodec/: AvCodeResample.h  Recorder.cpp  Recorder.h
Modules/DataStruct/: KDTree.cpp
Modules/InferTools/: inferTools.cpp  inferTools.hpp
Modules/Logger/: MoeSSLogger.cpp  MoeSSLogger.hpp
MoeVoiceStudioCoreSrc/: .gitignore  CMakeLists.txt  CMakeSettings.json  MResource.qrc  README.md  main.cpp
MoeVoiceStudioCoreSrc/Lib/: README.md
MoeVoiceStudioCoreSrc/Lib/MJson/yyjson-master/: CMakeLists.txt
MoeVoiceStudioCoreSrc/Lib/World/: CMakeLists.txt  World.lib
MoeVoiceStudioCoreSrc/Lib/ffmpeg-4.2.1/Lib/: avutil.lib  swresample.lib
MoeVoiceStudioCoreSrc/Lib/fftw/: README.md
MoeVoiceStudioCoreSrc/MainWindow/: MainWindow.pro  MessageSender.h  MoeVS_zh_CN.ts  mainmenu.cpp  mainmenu.h  mainmenu.ui  moevoicestudio.cpp  moevoicestudio.h  moevoicestudio.ui  moevssetting.cpp  moevssetting.h  moevssetting.ui  theme.qss
MoeVoiceStudioCoreSrc/MainWindow/Controls/BaseControls/: MScrollArea.cpp  MScrollArea.h  MSlider.cpp  MSlider.h
MoeVoiceStudioCoreSrc/MainWindow/Controls/CurveEditor/: editorpage.h  mcurveeditor.cpp  mcurveeditor.h  mcurveeditor.ui
MoeVoiceStudioCoreSrc/MainWindow/Controls/Player/: player.cpp  player.h
MoeVoiceStudioCoreSrc/MainWindow/Controls/TTSEditor/: meditor.cpp  meditor.h  ttseditor.cpp  ttseditor.h  ttseditor.ui  ttseditorblock.cpp  ttseditorblock.h  ttseditorblock.ui
MoeVoiceStudioCoreSrc/MainWindow/SVC/: svcinferslicersetting.cpp  svcinferslicersetting.h  svcinferslicersetting.ui  svcmainwindow.cpp  svcmainwindow.h  svcmainwindow.ui
MoeVoiceStudioCoreSrc/MainWindow/SVS/: svsmainwindow.cpp  svsmainwindow.h  svsmainwindow.ui
MoeVoiceStudioCoreSrc/MainWindow/TTS/: ttsmainwindow.cpp  ttsmainwindow.h  ttsmainwindow.ui
MoeVoiceStudioCoreSrc/Modules/: README.md  StringPreprocess.hpp
MoeVoiceStudioCoreSrc/Modules/AvCodec/: AudioRecording.cpp  AvCodeResample.h
MoeVoiceStudioCoreSrc/Modules/DataStruct/: KDTree.cpp  KDTree.hpp  README.md
MoeVoiceStudioCoreSrc/Modules/InferTools/: Project.cpp  Project.hpp  inferTools.cpp  inferTools.hpp
MoeVoiceStudioCoreSrc/Modules/Logger/: MoeSSLogger.cpp  MoeSSLogger.hpp
MoeVoiceStudioCoreSrc/Modules/Models/header/: DiffSinger.hpp  DiffSvc.hpp  ModelBase.hpp  Pits.hpp  Tacotron.hpp  Vits.hpp  VitsSvc.hpp
MoeVoiceStudioCoreSrc/Modules/Models/src/: DiffSinger.cpp  DiffSvc.cpp  ModelBase.cpp  Pits.cpp  Tacotron.cpp  Vits.cpp  VitsSvc.cpp
MoeVoiceStudioCoreSrc/Modules/PluginApi/: pluginApi.cpp  pluginApi.hpp
MoeVoiceStudioCoreSrc/localization/: MoeVS_zh_CN.ts
MoeVoiceStudioCoreSrc/resources/: MResource.qrc
MoeVoiceStudioSvc - Core - Cmd/: MoeVoiceStudioSvc - Core - Cmd.cpp  MoeVoiceStudioSvc - Core - Cmd.vcxproj  MoeVoiceStudioSvc - Core - Cmd.vcxproj.filters
MoeVoiceStudioSvc - Core - Cmd/LibDLVoiceCodec/: base.cpp  base.h  operator.h  value.cpp  value.h
MoeVoiceStudioSvc - Core - Cmd/Modules/: Modules.cpp  Modules.hpp  StringPreprocess.hpp
MoeVoiceStudioSvc - Core - Cmd/analyse/: GptSoVits.md
Python-RVC-Onnx-Inference/: demo.py  onnx_inference.py
ShirakanaTTSUI/: AvCodeResample.h  ShirakanaTTSUI.cpp  ShirakanaTTSUI.h  ShirakanaTTSUI.vcxproj  ShirakanaTTSUI.vcxproj.filters  ShirakanaTTSUI1.rc  framework.h  packages.config  resource1.h
ShirakanaTTSUI/Event/: event.cpp  worlds.h
ShirakanaTTSUI/Extend/: IconButton.cpp  IconButton.h
ShirakanaTTSUI/Helper/: Helper.cpp  Helper.h
ShirakanaTTSUI/Infer/: InferClass.hpp  MioShirakanaTensor.hpp  inferFunc.cpp  inferTools.cpp  inferTools.hpp
ShirakanaTTSUI/Player/: AudioPlayer.cpp  AudioPlayer.h
ShirakanaTTSUI/PluginApi/: pluginApi.cpp  pluginApi.hpp
ShirakanaTTSUI/Window/: MainWindow.cpp  MainWindow.h  UISliderLayer.cpp  UISliderLayer.h
SubProject (Tacotron inference CPP)/: MioShirakanaTensor.hpp  Tacotron inside.cpp  Tacotron inside.sln  Tacotron inside.vcxproj  Tacotron inside.vcxproj.filters  Tacotron2Cpp.cpp  packages.config
SubProject VITSLJS-Libtorch/: VITS-LibTorch.cpp  VITS-LibTorch.sln  VITS-LibTorch.vcxproj  VITS-LibTorch.vcxproj.filters
Ver 2.X/: ShirakanaTTSUI.aps  ShirakanaTTSUI.cpp  ShirakanaTTSUI.h  ShirakanaTTSUI.rc  ShirakanaTTSUI.vcxproj  ShirakanaTTSUI.vcxproj.filters  ShirakanaTTSUI1.aps  ShirakanaTTSUI1.rc  framework.h  packages.config  readme.md  resource1.h
fish-speech.cpp/: CMakeLists.txt  test.py  test.txt
fish-speech.cpp/Demo/: CMakeLists.txt  main.cpp
fish-speech.cpp/include/: Base.h  Module.h  llama.h
fish-speech.cpp/src/: Base.cpp  Module.cpp  llama.cpp
libdlvoicecodec/: MoeVoiceStudioSvc - Core - Cmd.cpp  MoeVoiceStudioSvc - Core - Cmd.vcxproj  MoeVoiceStudioSvc - Core - Cmd.vcxproj.filters  packages.config
libsvc/: README.md  dllmain.cpp  libsvc.vcxproj  libsvc.vcxproj.filters
libtts/: dllmain.cpp  framework.h  libtts.vcxproj  libtts.vcxproj.filters
(+275 files in other folders)
